[package]
authors.workspace = true
description = "Shared hosted runtime kernel for Uldren Loom."
edition.workspace = true
license.workspace = true
name = "uldren-loom-hosted-core"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "loom_hosted_core"

[lints]
workspace = true

[features]
default = []
fips = ["tls", "loom-core/fips", "rustls/fips"]
http = [
    "network-access",
    "dep:axum",
    "dep:futures-util",
    "dep:http-body-util",
    "dep:hyper",
    "dep:hyper-util",
    "dep:tower",
]
network-access = ["dep:tokio"]
test-support = []
tls = ["network-access", "dep:rustls", "dep:tokio-rustls", "dep:x509-parser"]

[dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "query", "tokio"], optional = true }
futures-util = { version = "0.3", default-features = false, optional = true }
http-body-util = { version = "0.1.4", default-features = false, optional = true }
hyper = { version = "1", default-features = false, features = ["http1", "http2", "server"], optional = true }
hyper-util = { version = "0.1", default-features = false, features = ["http1", "http2", "server-auto", "service", "tokio"], optional = true }
loom-client.workspace = true
loom-codec.workspace = true
loom-core.workspace = true
loom-compute = { workspace = true, features = ["guards", "sql-state-access"] }
loom-coordination.workspace = true
loom-remote-protocol.workspace = true
loom-store.workspace = true
loom-types.workspace = true
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std"], optional = true }
tokio = { version = "1", default-features = false, features = ["net", "rt", "sync", "time"], optional = true }
tokio-rustls = { version = "0.26", default-features = false, optional = true }
tower = { version = "0.5", default-features = false, features = ["util"], optional = true }
x509-parser = { version = "0.18", default-features = false, optional = true }

[dev-dependencies]
loom-chat = { workspace = true }
loom-pages = { workspace = true }
rcgen = "0.14"
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
