[package]
authors.workspace = true
description = "Hosted PIM protocol listeners for Uldren Loom."
edition.workspace = true
license.workspace = true
name = "uldren-loom-hosted-pim"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "loom_hosted_pim"

[lints]
workspace = true

[features]
default = []
http = [
    "dep:axum",
    "dep:base64",
    "dep:quick-xml",
    "dep:serde_json",
    "dep:tokio",
    "dep:tower",
    "loom-hosted-core/http",
]
tls = ["http", "dep:tokio-rustls", "loom-hosted-core/tls"]

[dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "query", "tokio"], optional = true }
base64 = { version = "0.22", optional = true }
loom-core.workspace = true
loom-hosted-core.workspace = true
quick-xml = { version = "0.41", optional = true }
serde_json = { version = "1", optional = true }
tokio = { version = "1", default-features = false, features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "time"], optional = true }
tokio-rustls = { version = "0.26", default-features = false, optional = true }
tower = { version = "0.5", default-features = false, features = ["util"], optional = true }

[dev-dependencies]
loom-hosted-core = { workspace = true, features = ["test-support"] }
