[package]
authors.workspace = true
description = "Shared hosted protocol kernel for Uldren Loom."
edition.workspace = true
license.workspace = true
name = "uldren-loom-hosted"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "loom_hosted"

[lints]
workspace = true

[features]
columnar-arrow = ["loom-core/columnar-arrow"]
default = []
external-auth = [
    "dep:base64",
    "dep:caden",
    "dep:openidconnect",
    "dep:opensaml",
    "dep:ring",
    "dep:x509-parser",
]
external-auth-standard = ["external-auth", "dep:aws-lc-rs", "aws-lc-rs/non-fips"]
fips = ["tls", "external-auth", "dep:aws-lc-rs", "aws-lc-rs/fips", "loom-core/fips", "loom-hosted-core/fips", "rustls/fips"]
grpc = ["dep:prost", "dep:tokio", "dep:tokio-stream", "dep:tonic", "dep:tonic-prost", "loom-hosted-core/network-access"]
http = ["dep:axum", "dep:base64", "dep:futures-util", "dep:hyper", "dep:hyper-util", "dep:prost", "dep:quick-xml", "dep:snap", "dep:tokio", "dep:tower", "loom-hosted-core/http", "loom-hosted-pim/http"]
inference = ["dep:loom-inference"]
integration-tests = ["grpc", "http", "kafka-wire", "mysql-wire", "neo4j-wire", "pg-wire"]
kafka-wire = ["dep:kafka-protocol", "dep:tokio", "dep:uuid", "loom-hosted-core/network-access"]
mysql-wire = ["dep:tokio"]
neo4j-wire = ["dep:tokio", "loom-hosted-core/network-access"]
pg-wire = ["dep:async-trait", "dep:futures-util", "dep:pgwire", "dep:tokio"]
tls = ["http", "dep:rustls", "dep:tokio-rustls", "dep:x509-parser", "loom-hosted-core/tls", "loom-hosted-pim/tls", "pgwire?/server-api-aws-lc-rs"]

[dependencies]
async-trait = { version = "0.1", optional = true }
anyhow.workspace = true
axum = { version = "0.8", default-features = false, features = ["http1", "query", "tokio"], optional = true }
aws-lc-rs = { version = "1.17", default-features = false, features = ["alloc", "ring-sig-verify"], optional = true }
base64 = { version = "0.22", optional = true }
bytes.workspace = true
caden = { version = "0.7", features = ["serde"], optional = true }
futures-util = { version = "0.3", default-features = false, optional = true }
getrandom.workspace = true
gluesql-core = "0.19"
hex.workspace = true
hyper = { version = "1", default-features = false, features = ["http1", "http2", "server"], optional = true }
hyper-util = { version = "0.1", default-features = false, features = ["http1", "http2", "server-auto", "service", "tokio"], optional = true }
kafka-protocol = { workspace = true, optional = true }
loom-codec.workspace = true
loom-chat.workspace = true
loom-core.workspace = true
loom-coordination.workspace = true
loom-compute = { workspace = true, features = ["guards", "sql-state-access"] }
loom-hosted-core.workspace = true
loom-hosted-pim.workspace = true
loom-interchange.workspace = true
loom-interchange-io.workspace = true
loom-inference = { workspace = true, optional = true }
loom-lanes.workspace = true
loom-lifecycle.workspace = true
loom-drive.workspace = true
loom-pages.workspace = true
loom-redis.workspace = true
loom-reference.workspace = true
loom-result.workspace = true
loom-sql.workspace = true
loom-store.workspace = true
loom-substrate = { workspace = true, features = ["studio-meetings", "studio-pages", "studio-slackish", "studio-webish"] }
loom-tickets.workspace = true
loom-types.workspace = true
loom-wire.workspace = true
loom-watch.workspace = true
openidconnect = { version = "4.0", default-features = false, optional = true }
opensaml = { version = "0.2", optional = true }
pgwire = { version = "0.40.4", default-features = false, features = ["server-api"], optional = true }
prost = { version = "0.14", optional = true }
quick-xml = { version = "0.41", optional = true }
ring = { version = "0.17", optional = true }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std"], optional = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
snap = { version = "1.1", optional = true }
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "macros", "net", "sync", "time", "io-util"], optional = true }
tokio-rustls = { version = "0.26", default-features = false, optional = true }
tokio-stream = { version = "0.1", default-features = false, features = ["net"], optional = true }
tonic = { version = "0.14", default-features = false, features = ["codegen", "router", "tls-aws-lc", "transport"], optional = true }
tonic-prost = { version = "0.14", optional = true }
tower = { version = "0.5", default-features = false, features = ["util"], optional = true }
uuid = { workspace = true, optional = true }
x509-parser = { version = "0.18", default-features = false, optional = true }

[dev-dependencies]
opensearch = { version = "2.4.0", default-features = false, features = ["rustls-tls"] }
rcgen = "0.14"
sha1.workspace = true
tokio-postgres = { version = "0.7", default-features = false, features = ["runtime"] }
