[package]
authors.workspace = true
description = "Inference provider contracts and acquisition support for Uldren Loom."
edition.workspace = true
license.workspace = true
name = "uldren-loom-inference"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "loom_inference"

[lints]
workspace = true

[features]
default = []
candle-cpu = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
]
candle-cuda = [
    "candle-cpu",
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
]
core-ml = []
llama-cpp = ["dep:loom-native"]
mlx = ["dep:loom-native"]
native-hf = ["dep:hf-hub", "dep:tokio"]
ollama-rs = ["dep:ollama-rs", "dep:tokio"]
genai = ["dep:genai", "dep:tokio"]

[dependencies]
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
genai = { workspace = true, optional = true }
hex.workspace = true
hf-hub = { workspace = true, optional = true }
loom-types.workspace = true
loom-native = { workspace = true, optional = true }
ollama-rs = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sysinfo.workspace = true
tokenizers = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
